Add AboutMACActivity with defects

--- a/androidClient/app/src/main/AndroidManifest.xml
+++ b/androidClient/app/src/main/AndroidManifest.xml
@@ -42,9 +42,7 @@
         </service>
         <service
             android:name=".coursematerial.DownloadService"
-            android:enabled="true">
-
-        </service>
+            android:enabled="true"></service>
         <service android:name=".coursematerial.UploadService" />
 
         <activity
@@ -58,14 +56,11 @@
         </activity>
         <activity
             android:name=".notification.NotificationSettings"
-            android:label="@string/title_activity_notification_settings">
-
-        </activity>
+            android:label="@string/title_activity_notification_settings"></activity>
         <activity
             android:name=".ranks.RankActivity"
-            android:label="@string/title_activity_rank">
-
-        </activity>
+            android:label="@string/title_activity_rank"></activity>
+        <activity android:name=".aboutmac.AboutMacActivity"></activity>
     </application>
 
 </manifest>
